Closed Bug 1276865 Opened 10 years ago Closed 10 years ago

Set autoJSAPIOwnsErrorReporting when initializing the self-hosting compartment

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file)

Self-hosting initialization uses its own error reporter. We want to use the reporter only for warnings, and propagate exceptions up to the caller.
Attached patch PatchSplinter Review
Attachment #8758143 - Flags: review?(till)
Comment on attachment 8758143 [details] [diff] [review] Patch Review of attachment 8758143 [details] [diff] [review]: ----------------------------------------------------------------- r=me, nice. ::: js/src/vm/SelfHosting.cpp @@ +2686,5 @@ > return shg; > } > > +static void > +PrintAndClearPendingException(JSContext* cx, FILE* file) Perhaps call this "MaybePrint..."? We have js::GetAndClearException which asserts that an exception is pending, and it seems like we should align with that behavior, or make it clear that this does something different.
Attachment #8758143 - Flags: review?(till) → review+
Pushed by jandemooij@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/3aa6261dbb77 Set autoJSAPIOwnsErrorReporting when initializing the self-hosting compartment. r=till
Blocks: 1277278
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: