Bug 1276865 - Set autoJSAPIOwnsErrorReporting when initializing the self-hosting compartment. r=till